--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,77 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+.big_flex_container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  height: 80%;
+  width: 85%;
+  margin: 0 auto;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
+.row {
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  align-items: flex-end;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
+.row_1 {
+  height: 35%;
+}
+
+.row_2 {
+  height: 55%;
+}
+
+.box {
+  background-color: #eee;
+  padding: 1rem;
+}
+
+/* These sizes are good for computers in full-screen or horizontal tablets. */
+/* TODO: Make sizes for small screens and vertical view using @media */
+.intro_box {
+  height: 200px;
+  width: 250px;
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
   text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  font-size: 2rem;
+
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.instructions_box {
+  height: 150px;
+  width: 560px;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.bottom_box {
+  height: 100%;
+  min-height: 200px;
+  width: 45%;
+  margin-right: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.playlists_box {
+  margin-right: 1rem;
 }
 
-.logo {
-  height: 1em;
+.lower_box_text {
+  font-size: 1.7rem;
+  margin-bottom: 1rem;
+  flex: 0 1 auto;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  flex: 1 1 auto;
+  /* Allow scrolling in case of overflow */
+  overflow-y: auto;
+  min-height: 0px;
 }
