--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,10 @@
 
 html,
 body {
+  background-color: #fff;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -16,4 +17,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.page_container {
+  height: 100vh;
 }
