--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,7 +13,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
-  /* background-color: aqua; */
 }
 
 .row_1 {
@@ -26,27 +25,53 @@
 
 .box {
   background-color: #eee;
-  min-width: 150px;
+  padding: 1rem;
 }
 
+/* These sizes are good for computers in full-screen or horizontal tablets. */
+/* TODO: Make sizes for small screens and vertical view using @media */
 .intro_box {
-  height: 90%;
-  width: 20%;
+  height: 200px;
+  width: 250px;
   margin-right: 1rem;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  font-size: 2rem;
+
 }
 
 .instructions_box {
-  height: 50%;
-  width: 40%;
+  height: 150px;
+  width: 550px;
+}
+
+.bottom_box {
+  height: 100%;
+  min-height: 200px;
+  width: 45%;
+  margin-right: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .playlists_box {
-  height: 100%;
-  width: 45%;
   margin-right: 1rem;
 }
 
-.moods_box {
+.lower_box_text {
+  font-size: 1.7rem;
+  margin-bottom: 1rem;
+  flex: 0 1 auto;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   height: 100%;
-  width: 45%;
+  flex: 1 1 auto;
+  /* Allow scrolling in case of overflow */
+  overflow-y: auto;
+  min-height: 0px;
 }
