--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,24 @@ a {
 .page_container {
   height: 100vh;
 }
+
+/* Better-looking scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
