--- a/styles/playlist.module.css
+++ b/styles/playlist.module.css
@@ -1,6 +1,13 @@
-/* .playlist {
-    width: 300px;
-    height: 380px;
-    border: 0px;
-    background-color: transparent;
-} */
+.playlistContainer {
+    height: 100vh;
+    margin: 20px;
+}
+
+.embed {
+    display: flex;
+    justify-content: center;
+}
+
+.playlistText {
+    font-size: 20px;
+}
